--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ entrypoints==0.4
 executing==0.8.3
 fastjsonschema==2.16.2
 fqdn==1.5.1
+gunicorn==21.2.0
 idna==3.4
 importlib-metadata==6.0.0
 ipykernel==6.15.0
